# Smalltalk80

./: .gitignore  CMakeLists.txt  README.md  run  run_image
misc/: imageswapper.c
src/: bitblt.cpp  bitblt.h  conf.h  filesystem.h  hal.h  interpreter.cpp  interpreter.h  main.cpp  objmemory.cpp  objmemory.h  oops.h  posixfilesystem.h  realwordmemory.h  vm.cpp  vm.h
